syntax = "proto3";

package post;

message Post {
  string id = 1;
  string title = 2;
  string description = 3;
  string author = 4;
}

message GetPostsRequest {
  string accessToken = 1;
}

message GetPostsResponse {
  repeated Post posts = 1;
}

message CreatePostRequest {
  string title = 1;
  string description = 2;
  string author = 3;
}

message CreatePostResponse {
  string id = 1;
}

service PostService {
  rpc GetPosts (GetPostsRequest) returns (GetPostsResponse);
  rpc CreatePost (CreatePostRequest) returns (CreatePostResponse);
}